--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.6",
-        "sweetalert2": "^11.22.0"
+        "sweetalert2": "^11.22.0",
+        "tailwind": "^4.0.0"
     }
 }
